samples/_failures_safe/1761667020_0e0bc6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c377bc73.c: In function ‘main’:
./samples/SAFE/__tmp_c377bc73.c:166:24: error: expected ‘)’ at end of input
  166 |     print_tokens(tokens
      |                 ~      ^
      |                        )
./samples/SAFE/__tmp_c377bc73.c:166:5: error: expected declaration or statement at end of input
  166 |     print_tokens(tokens
      |     ^~~~~~~~~~~~
